deployment/nginxIngress/manifests/k8_keda_main.yml
apiVersion: v1
kind: Service
metadata:
  name: sidmlbackend-http
  namespace: ml-app
spec:
  selector:
    app: sidmlbackend-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidmlbackend-http
  namespace: ml-app
  labels:
    app: sidmlbackend-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidmlbackend-http
  template:
    metadata:
      labels:
        app: sidmlbackend-http
    spec:
      containers:
      - name: sidmlbackend-http
        image: acrmlbackend.azurecr.io/sidmlbackend:latest
        resources:
          limits:
            cpu: 800m
            memory: 2048Mi
          requests:
            cpu: 300m
            memory: 1024Mi
        volumeMounts:
          - name: azure
            mountPath: /mnt/azure/dataset
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        startupProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
      serviceAccountName: sidmlbackend-function-keys-identity-svc-act
      volumes:
        - name: azure
          csi:
            driver: blob.csi.azure.com
            volumeAttributes:
              secretName: azure-secret
              containerName: datasets
              mountOptions: "-o allow_other --file-cache-timeout-in-seconds=120"
---
